1.更新RocketMQ版本到3.5.8，这意味着是阿里官方最后一个可维护版本，以后RocketMQ会交给Apache了 2.修复了原生版本几个不合理的代码 3.由于官方把rocketmq-store模块重构，原先支持事务消息也响应调整 4.由于公司事情多，才时隔半年有余，发布新版本，花了2天一夜搞完